test/compilable/extra-files/test9896b.d
module test9896b;

int square(int x)
{
    return x * x;
}
