test/fail_compilation/fail168.d

void main()
{
    int x;
    immutable(int)* p = &x;
    *p = 3;
}
